manifests/gke/main-app/main-app.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: main-app
---
apiVersion: v1
kind: Service
metadata:
  name: main-app-svc
  namespace: main-app
spec:
  type: NodePort
  selector:
    app: main-app
  ports:
    - port: 2345
      targetPort: 8080
      protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: main-app
  namespace: main-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: main-app
  template:
    metadata:
      labels:
        app: main-app
    spec:
      volumes:
        - name: common-data
          persistentVolumeClaim:
            claimName: common-data
      containers:
        - name: main-app
          image: hkotka/main-app1
          imagePullPolicy: Always
          volumeMounts:
            - name: common-data
              mountPath: /common-data
        - name: timestamper
          image: hkotka/main-app2
          imagePullPolicy: Always
          volumeMounts:
            - name: common-data
              mountPath: /common-data
---
apiVersion: v1
kind: Service
metadata:
  name: pingpong-svc
  namespace: main-app
spec:
  type: NodePort
  selector:
    app: pingpong
  ports:
    - port: 2346
      targetPort: 8080
      protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pingpong
  namespace: main-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: pingpong
  template:
    metadata:
      labels:
        app: pingpong
    spec:
      containers:
        - name: pingpong
          image: hkotka/ping-pong
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-svc
  namespace: main-app
  labels:
    app: postgres
spec:
  ports:
    - port: 5432
      name: postgres
  clusterIP: None
  selector:
    app: postgres
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres-ss
  namespace: main-app
spec:
  serviceName: postgres
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:13.0
          ports:
            - name: postgres
              containerPort: 5432
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
              subPath: postgres
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 100Mi
